--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Raju's Portfolio</title>
   <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
+  <link rel="icon" type="image/x-icon" href="assets/images/raju.jpg">
+  <script defer src="scripts.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
@@ -111,7 +112,7 @@
             <p>Issued by NPTEL | Score: 56%</p>
         </div>  
         <div class="cert-card">
-            <img src="assets/Certificates/1000309378.jpg" alt="IoT Internship Certificate">
+            <img src="assets/Certificates/Iot.jpg" alt="IoT Internship Certificate">
             <h3>IoT Internship - Ocean Apps Technologies</h3>
             <p>Designed a heart rate monitoring system with real-time visualization.</p>
         </div>  
@@ -126,10 +127,10 @@
   <section id="resume" class="resume-section" data-aos="fade-up">
     <h2>My Resume</h2>
     <div class="resume-wrapper">
-      <iframe src="assets/resume/Dhana_raju_Developer.pdf" frameborder="0"></iframe>
+      <iframe src="assets/resume/resume.pdf" frameborder="0"></iframe>
       <div class="resume-actions">
-        <a href="assets/resume/Dhana_raju_Developer.pdf" target="_blank" class="btn view-btn">View Fullscreen</a>
-        <a href="assets/resume/Dhana_raju_Developer.pdf" download class="btn download-btn">Download PDF</a>
+        <a href="assets/resume/resume.pdf" target="_blank" class="btn view-btn">View Fullscreen</a>
+        <a href="assets/resume/resume.pdf" download class="btn download-btn">Download PDF</a>
       </div>
     </div>
   </section>
@@ -156,7 +157,6 @@
     </div> 
   </div>
 </section>
-<script src="scripts.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init({
