Updated portfolio with resume and icon changes

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <p>Issued by NPTEL | Score: 56%</p>
         </div>  
         <div class="cert-card">
-            <img src="assets/Certificates/Iot.jpg" alt="IoT Internship Certificate">
+            <img src="assets/certificates/Iot.jpg" alt="IoT Internship Certificate">
             <h3>IoT Internship - Ocean Apps Technologies</h3>
             <p>Designed a heart rate monitoring system with real-time visualization.</p>
         </div>  
