--- a/index.html
+++ b/index.html
@@ -62,47 +62,107 @@
   
   <section id="skills" class="skills-section" data-aos="fade-up">
     <h2>My Skills</h2>
-    <div class="skills-container">
-      <div class="skill-card">HTML5</div>
-      <div class="skill-card">CSS3</div>
-      <div class="skill-card">JavaScript</div>
-      <div class="skill-card">React.js</div>
-      <div class="skill-card">Python</div>
-      <div class="skill-card">C Language</div>
-      <div class="skill-card">Django</div>
-      <div class="skill-card">Flask</div>
-      <div class="skill-card">Machine Learning</div>
-      <div class="skill-card">SQL</div>
-      <div class="skill-card">Git & GitHub</div>
-      <div class="skill-card">Responsive Design</div>
-    </div>
+  <div class="skills-container">
+  <div class="skill-card">
+    HTML5<br><i class="fab fa-html5 fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    CSS3<br><i class="fab fa-css3-alt fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    JavaScript<br><i class="fab fa-js fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    React.js<br><i class="fab fa-react fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    Python<br><i class="fab fa-python fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    C Language<br><i class="fas fa-code fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    Django<br><i class="fas fa-leaf fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    Flask<br><i class="fas fa-flask fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    Machine Learning<br><i class="fas fa-brain fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    SQL<br><i class="fas fa-database fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    Git & GitHub<br><i class="fab fa-github fa-2x"></i>
+  </div>
+  <div class="skill-card">
+    Responsive Design<br><i class="fas fa-mobile-alt fa-2x"></i>
+  </div>
+</div>
+
   </section>
-  
-  <section id="projects" class="projects-section" data-aos="fade-up">
-    <h2>Internships & Projects</h2>
-    <div class="projects-container">
-  
-      <div class="project-card">
-        <h3>Heart Rate Monitoring System</h3>
-        <p>Developed a real-time health monitoring system using Arduino, Pulse Sensor, and ThingSpeak, integrated with a Flask web app to display BPM and health status.</p>
-        <span class="tag">IoT</span><span class="tag">Flask</span><span class="tag">ThingSpeak</span>
-      </div>
-  
-      <div class="project-card">
-        <h3>Covid Testing Management</h3>
-        <p>Full-stack web app built during internship at VSM College. Managed test records, reports, and admin dashboard with secure login.</p>
-        <span class="tag">HTML</span><span class="tag">CSS</span><span class="tag">Python</span>
-      </div>
-  
-      <div class="project-card">
+
+<section id="projects" class="projects-section" data-aos="fade-up">
+  <h2>Internships & Projects</h2>
+  <div class="projects-container">
+    <!-- Project 1 -->
+    <div class="project-images-wrapper">
+      <div class="project-card" data-aos="fade-up"> 
+        <div class="project-images carousel">
+          <div class="project-images-inner">
+            <img src="assets/images/crypto1.png" alt="Crypto Project 1">
+            <img src="assets/images/crypto2.png" alt="Crypto Project 2">
+            <img src="assets/images/crypto3.png" alt="Crypto Project 3">
+            <img src="assets/images/crypto4.png" alt="Crypto Project 4">
+            <img src="assets/images/crypto5.png" alt="Crypto Project 5">
+          </div>
+        </div>
+        <div class="dots"></div>
         <h3>Crypto Price Prediction</h3>
         <p>Used ML & LSTM models to predict BTC, ETH, and LTC prices with 7-day forecasting. Visualized results and generated investment insights.</p>
         <span class="tag">ML</span><span class="tag">LSTM</span><span class="tag">Matplotlib</span>
       </div>
-  
     </div>
-  </section>
-  
+    <!-- Project 2 -->
+    <div class="project-images-wrapper">
+      <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+        <div class="project-images carousel">
+          <div class="project-images-inner">
+            <img src="assets/images/pulse1.jpg" alt="Heart Monitor 1">
+            <img src="assets/images/pulse2.png" alt="Heart Monitor 2">
+            <img src="assets/images/pulse3.png" alt="Heart Monitor 3">
+            <img src="assets/images/pulse4.png" alt="Heart Monitor 4">
+            <img src="assets/images/pulse5.png" alt="Heart Monitor 5">
+          </div>
+        </div>
+        <div class="dots"></div>
+        <h3>Heart Rate Monitoring System</h3>
+        <p>Developed a real-time health monitoring system using Arduino, Pulse Sensor, and ThingSpeak, integrated with a Flask web app to display BPM and health status.</p>
+        <span class="tag">IoT</span><span class="tag">Flask</span><span class="tag">ThingSpeak</span>
+      </div>
+    </div>
+    <!-- Project 3 -->
+    <div class="project-images-wrapper">
+      <div class="project-card" data-aos="fade-up" data-aos-delay="200">
+        <div class="project-images carousel">
+          <div class="project-images-inner">
+            <img src="assets/images/covide1.png" alt="Covid App 1">
+            <img src="assets/images/covide2.png" alt="Covid App 2">
+            <img src="assets/images/covide3.png" alt="Covid App 3">
+            <img src="assets/images/covide4.png" alt="Covid App 4">
+            <img src="assets/images/covide5.png" alt="Covid App 5">
+          </div>
+        </div>
+        <div class="dots"></div>
+        <h3>Covid Testing Management</h3>
+        <p>Full-stack web app built during internship at VSM College. Managed test records, reports, and admin dashboard with secure login.</p>
+        <span class="tag">HTML</span><span class="tag">CSS</span><span class="tag">Python</span>
+      </div>
+    </div>
+  </div>
+</section>
+
   <section id="certifications" class="certifications-section" data-aos="fade-up">
     <h2>Certifications</h2>
     <div class="certs-container">
@@ -112,7 +172,7 @@
             <p>Issued by NPTEL | Score: 56%</p>
         </div>  
         <div class="cert-card">
-            <img src="assets/certificates/Iot.jpg" alt="IoT Internship Certificate">
+            <img src="assets/certificates/iot.jpg" alt="IoT Internship Certificate">
             <h3>IoT Internship - Ocean Apps Technologies</h3>
             <p>Designed a heart rate monitoring system with real-time visualization.</p>
         </div>  
@@ -123,7 +183,7 @@
         </div>
     </div>
   </section>
-  
+
   <section id="resume" class="resume-section" data-aos="fade-up">
     <h2>My Resume</h2>
     <div class="resume-wrapper">
