Portfolio new update

--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Raju's Portfolio</title>
+  <title>Portifolio Raju</title>
   <meta name="description" content="Raju's web development portfolio with projects, skills, and contact info.">
   <meta name="keywords" content="Raju, Portfolio, Web Developer, Projects, HTML, CSS, JavaScript">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Raju I.">
+  <!-- Open Graph for social preview -->
+  <meta name="google-site-verification" content="lb6CO5brClgkVUA6G1jR8mZ_XQJx1uS_pwwWUPxZlo4" />
+  <meta property="og:title" content="Dhana Raju | Web Developer Portfolio">
+  <meta property="og:description" content="Portfolio showcasing Dhana Raju's web development work.">
+  <meta property="og:url" content="https://illa-dhana-raju.github.io/Portfolio_raju/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Dhana Raju | Portfolio">
+  <meta name="twitter:description" content="Explore Dhana Raju's projects and web skills.">
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" type="image/x-icon" href="assets/images/image.png">
   <script defer src="scripts.js"></script>
