--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="about-content">
         <h2>About Me</h2>
         <p>
-          I'm Raju, a passionate Full Stack Developer and Machine Learning enthusiast. I build interactive web apps and smart solutions using HTML, CSS, JS, Python, and more. I love turning complex problems into simple, beautiful interfaces.
+          I'm Dhana Raju, a passionate Full Stack Developer and Machine Learning enthusiast. I build interactive web apps and smart solutions using HTML, CSS, JS, Python, and more. I love turning complex problems into simple, beautiful interfaces.
         </p>
         <p>
           I’m always exploring new technologies and constantly improving myself through internships, real-time projects, and open-source contributions.
@@ -137,6 +137,7 @@
         <div class="dots"></div>
         <h3>Crypto Price Prediction</h3>
         <p>Used ML & LSTM models to predict BTC, ETH, and LTC prices with 7-day forecasting. Visualized results and generated investment insights.</p>
+        <p>Project Link <a href="">Git hub link</a></p>
         <span class="tag">ML</span><span class="tag">LSTM</span><span class="tag">Matplotlib</span>
       </div>
     </div>
@@ -155,6 +156,9 @@
         <div class="dots"></div>
         <h3>Heart Rate Monitoring System</h3>
         <p>Developed a real-time health monitoring system using Arduino, Pulse Sensor, and ThingSpeak, integrated with a Flask web app to display BPM and health status.</p>
+        <div class="project-links">
+          <p>Project Link <a href="https://github.com/ILLA-DHANA-RAJU/IOT-Project-on-health-assessment.git" target="blank">Git hub link</a></p>
+        </div>
         <span class="tag">IoT</span><span class="tag">Flask</span><span class="tag">ThingSpeak</span>
       </div>
     </div>
@@ -173,6 +177,7 @@
         <div class="dots"></div>
         <h3>Covid Testing Management</h3>
         <p>Full-stack web app built during internship at VSM College. Managed test records, reports, and admin dashboard with secure login.</p>
+        <p>Project Link <a href="">Git hub link</a></p>
         <span class="tag">HTML</span><span class="tag">CSS</span><span class="tag">Python</span>
       </div>
     </div>
@@ -256,7 +261,7 @@
 <hr class="section-divider">
 <footer class="footer">
   <div class="footer-content">
-    <p>&copy; 2025 Dhana Raju. All Rights Reserved.</p>
+    <p><i>&copy; 2025 Dhana Raju. All Rights Reserved.</i></p>
     <div class="footer-links">
       <a href="#home">Home</a>
       <a href="#about">About</a>
