--- a/index.html
+++ b/index.html
@@ -190,32 +190,32 @@
     <div class="certs-wrapper">
       <div class="certs-container" id="certsContainer">
         <div class="cert-card">
-          <img src="assets/certificates/NPTEL Certificate.png" alt="NPTEL Certificate">
+          <img src="assets/certificates/NPTEL Certificate.png" alt="NPTEL Certificate" onclick="openModal(this.src)">
           <h3>NPTEL - The Joy of Computing using Python</h3>
           <p>Issued by NPTEL | Score: 56%</p>
         </div>
         <div class="cert-card">
-          <img src="assets/certificates/Iot.png" alt="IoT Internship Certificate">
+          <img src="assets/certificates/Iot.png" alt="IoT Internship Certificate" onclick="openModal(this.src)">
           <h3>IoT Internship - Ocean Apps Technologies</h3>
           <p>Designed a heart rate monitoring system with real-time visualization.</p>
         </div>
         <div class="cert-card">
-          <img src="assets/certificates/Web developmen in college.jpg" alt="Full Stack Internship Certificate">
+          <img src="assets/certificates/Web developmen in college.jpg" alt="Full Stack Internship Certificate" onclick="openModal(this.src)">
           <h3>Full Stack Development Internship</h3>
           <p>Developed a Covid Testing System at VSM College.</p>
         </div>
         <div class="cert-card">
-          <img src="assets/certificates/AI.jpg" alt="IoT Internship Certificate">
+          <img src="assets/certificates/AI.jpg" alt="IoT Internship Certificate" onclick="openModal(this.src)">
           <h3>Fundmental of AI - Ocean Apps Technologies</h3>
           <p>3-months training classes on Fundamentals on AI of ML and DL basics .</p>
         </div>
         <div class="cert-card">
-          <img src="assets/certificates/Freecodecamp.png" alt="IoT Internship Certificate">
+          <img src="assets/certificates/Freecodecamp.png" alt="IoT Internship Certificate" onclick="openModal(this.src)">
           <h3>Web development - freecodecamp</h3>
           <p>Completed tasks and getting certification from freecodecamp on responsive web development</p>
         </div>
         <div class="cert-card">
-          <img src="assets/certificates/IBM.png" alt="IoT Internship Certificate">
+          <img src="assets/certificates/IBM.png" alt="IoT Internship Certificate" onclick="openModal(this.src)">
           <h3>Machine Learning with pyton - IBM</h3>
           <p>Learning of Machine learning concepts to complete tasks in IBM.</p>
         </div>
@@ -223,6 +223,10 @@
       </div>
     </div>
     <button class="carousel-btn right" id="nextBtn">&#10095;</button>
+    <div id="certModal" class="modal">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <img class="modal-content" id="modalImg">
+    </div>
   </section>
 
   <section id="resume" class="resume-section" data-aos="fade-up">
@@ -285,7 +289,26 @@
   document.getElementById("navMenu").classList.toggle("show");
   document.querySelector(".hamburger").classList.toggle("open");
 }
-</script>
+  // Initial setup after page loads
+  window.addEventListener('load', () => {
+    setInitialPosition();
+  });
+   function openModal(src) {
+    document.getElementById("modalImg").src = src;
+    document.getElementById("certModal").style.display = "block";
+  }
 
+  function closeModal() {
+    document.getElementById("certModal").style.display = "none";
+  }
+
+  // Optional: close modal on outside click
+  window.onclick = function(event) {
+    const modal = document.getElementById("certModal");
+    if (event.target === modal) {
+      modal.style.display = "none";
+    }
+  };
+</script>
 </body>
 </html>
