--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
 
 <!-- ======= HERO SECTION ======= -->
 <main>
- <section id="home" class="hero-section active section" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
+ <section id="home" class="hero-section active section " data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
 
   <!-- Background Slider -->
       <div class="bg-slide active" style="background-image: url('assets/bgimages/Background.jpg');"></div>
       <div class="bg-slide" style="background-image: url('assets/bgimages/Background2.avif');"></div>
       <div class="bg-slide" style="background-image: url('assets/bgimages/Background3.avif');"></div>
-      <div class="bg-slide" style="background-image: url('assets/bgimages/skills.jpg');"></div>
 
     <div class="hero-wrapper">
       <!-- Left: Content -->
@@ -96,8 +95,8 @@
         </div>
         <div class="service-card">
           <i class="fas fa-mobile-alt"></i>
-          <h3>Mobile Development</h3>
-          <p>Cross-platform apps with smooth UI & UX.</p>
+          <h3>Full Stack Development</h3>
+          <p>End-to-End full web site with smooth UI & UX.</p>
         </div>
         <div class="service-card">
           <i class="fas fa-database"></i>
@@ -111,14 +110,14 @@
 
     <!-- Empty sections for next steps -->
     <section id="about" class="about-section section">
-      <div class="about-container" data-aos="fade-right">
+      <div class="about-container" >
         <div class="about-image">
           <img src="assets/images/DSC_0220.jpg" alt="Raju Profile">
         </div>
-        <div class="about-content" data-aos="fade-right">
+        <div class="about-content">
           <h2>About Me</h2>
           <p>
-            I'm Dhana Raju, a passionate Full Stack Developer and Machine Learning enthusiast. 
+            I'm <b style="color: #3dbdc8ff">Dhana Raju</b>, a passionate Full Stack Developer and Machine Learning enthusiast. 
             I build interactive web apps and smart solutions using HTML, CSS, JS, Python, and more. 
             I love turning complex problems into simple, beautiful interfaces.
           </p>
@@ -135,7 +134,7 @@
       <h2>About My Studies</h2>
       <div class="container-box education-content"> 
         <!-- B.Tech Card -->
-        <div class="timeline-item left"  data-aos="fade-up">
+        <div class="timeline-item left" >
           <div class="card-container">
             <h3>B.Tech - Computer Science and Engineering</h3>
             <hr class="section-block">
@@ -222,42 +221,44 @@
     <div class="projects-container">
       <!-- Project 1 -->
       <div class="project-images-wrapper">
+        <div class="project-card">
+          <div class="project-images carousel">
+            <div class="project-images-inner">
+              <img src="assets/images/portfolio1.png" alt="img loading...">
+              <img src="assets/images/portfolio2.png" alt="img loading...">
+              <img src="assets/images/portfolio3.png" alt="img loading...">
+              <img src="assets/images/portfolio4.png" alt="img loading...">
+              <img src="assets/images/portfolio5.png" alt="img loading...">
+            </div>
+          </div>
+          <div class="dots"></div>
+          <h3>Portfolio</h3>
+          <p>This portfolio is made by using of Html, CSS, JavaScript and Flask to showcase all of my skills.</p>
+          <span class="tag">Python</span><span class="tag">Flask</span>
+          <div class="project-links">
+            <a href="https://github.com/ILLA-DHANA-RAJU/Portfolio.git" target="blank" alt="Loading wait a moment"><button>Git hub link</button></a>
+          </div>
+        </div>
+      </div>
+      <!-- Project 2 -->
+      <div class="project-images-wrapper">
         <div class="project-card"> 
           <div class="project-images carousel">
             <div class="project-images-inner">
-              <img src="assets/images/crypto1.png" alt="Crypto Project 1">
-              <img src="assets/images/crypto2.png" alt="Crypto Project 2">
-              <img src="assets/images/crypto3.png" alt="Crypto Project 3">
-              <img src="assets/images/crypto4.png" alt="Crypto Project 4">
-              <img src="assets/images/crypto5.png" alt="Crypto Project 5">
+              <img src="assets/images/crypto1.png" alt="img loading...">
+              <img src="assets/images/crypto2.png" alt="img loading...">
+              <img src="assets/images/crypto3.png" alt="img loading...">
+              <img src="assets/images/crypto4.png" alt="img loading...">
+              <img src="assets/images/crypto5.png" alt="img loading...">
             </div>
           </div>
           <div class="dots"></div>
           <h3>Crypto Price Prediction</h3>
           <p>Used ML & LSTM models to predict BTC, ETH, and LTC prices with 7-day forecasting. Visualized results and generated investment insights.</p>
-          <p>Project Link <a href="">Git hub link</a></p>
           <span class="tag">ML</span><span class="tag">LSTM</span><span class="tag">Matplotlib</span>
-        </div>
-      </div>
-      <!-- Project 2 -->
-      <div class="project-images-wrapper">
-        <div class="project-card">
-          <div class="project-images carousel">
-            <div class="project-images-inner">
-              <img src="assets/images/pulse1.jpg" alt="Heart Monitor 1">
-              <img src="assets/images/pulse2.png" alt="Heart Monitor 2">
-              <img src="assets/images/pulse3.png" alt="Heart Monitor 3">
-              <img src="assets/images/pulse4.png" alt="Heart Monitor 4">
-              <img src="assets/images/pulse5.png" alt="Heart Monitor 5">
-            </div>
-          </div>
-          <div class="dots"></div>
-          <h3>Heart Rate Monitoring System</h3>
-          <p>Developed a real-time health monitoring system using Arduino, Pulse Sensor, and ThingSpeak, integrated with a Flask web app to display BPM and health status.</p>
           <div class="project-links">
-            <p>Project Link <a href="https://github.com/ILLA-DHANA-RAJU/IOT-Project-on-health-assessment.git" target="blank">Git hub link</a></p>
+            <a href="" targe="_blank" alt=""><button>Git hub link</button></a>
           </div>
-          <span class="tag">IoT</span><span class="tag">Flask</span><span class="tag">ThingSpeak</span>
         </div>
       </div>
       <!-- Project 3 -->
@@ -265,18 +266,41 @@
         <div class="project-card">
           <div class="project-images carousel">
             <div class="project-images-inner">
-              <img src="assets/images/covide1.png" alt="Covid App 1">
-              <img src="assets/images/covide2.png" alt="Covid App 2">
-              <img src="assets/images/covide3.png" alt="Covid App 3">
-              <img src="assets/images/covide4.png" alt="Covid App 4">
-              <img src="assets/images/covide5.png" alt="Covid App 5">
+              <img src="assets/images/pulse1.jpg" alt="img loading...">
+              <img src="assets/images/pulse2.png" alt="img loading...">
+              <img src="assets/images/pulse3.png" alt="img loading...">
+              <img src="assets/images/pulse4.png" alt="img loading...">
+              <img src="assets/images/pulse5.png" alt="img loading...">
+            </div>
+          </div>
+          <div class="dots"></div>
+          <h3>Heart Rate Monitoring System</h3>
+          <p>Developed a real-time health monitoring system using Arduino, Pulse Sensor, and ThingSpeak, integrated with a Flask web app to display BPM and health status.</p>
+          <span class="tag">IoT</span><span class="tag">Flask</span><span class="tag">ThingSpeak</span>
+          <div class="project-links">
+            <a href="https://github.com/ILLA-DHANA-RAJU/IOT-Project-on-health-assessment.git" target="blank"><button>Git hub link</button></a>
+          </div>
+        </div>
+      </div>
+      <!-- Project 4 -->
+      <div class="project-images-wrapper">
+        <div class="project-card">
+          <div class="project-images carousel">
+            <div class="project-images-inner">
+              <img src="assets/images/covide1.png" alt="img loading...">
+              <img src="assets/images/covide2.png" alt="img loading...">
+              <img src="assets/images/covide3.png" alt="img loading...">
+              <img src="assets/images/covide4.png" alt="img loading...">
+              <img src="assets/images/covide5.png" alt="img loading...">
             </div>
           </div>
           <div class="dots"></div>
           <h3>Covid Testing Management</h3>
           <p>Full-stack web app built during internship at VSM College. Managed test records, reports, and admin dashboard with secure login.</p>
-          <p>Project Link <a href="">Git hub link</a></p>
-          <span class="tag">HTML</span><span class="tag">CSS</span><span class="tag">Python</span>
+          <span class="tag">HTML</span><span class="tag">CSS</span><span class="tag">PHP</span>
+          <div class="project-links">
+            <a href="#" alt="This is not avalible"><button>Git hub link</button></a>
+          </div>
         </div>
       </div>
     </div>
@@ -364,7 +388,7 @@
 </main>
 <hr class="section-divider">
 <footer class="footer">
-  <div class="footer-content" data-aos="fade-right">
+  <div class="footer-content">
     <p><i>&copy; 2025 Dhana Raju. All Rights Reserved.</i></p>
   </div>
   <div class="social-icon items">
