--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             </div>
             
             <div class="resume-preview" id="resumePreview">
-                <iframe src="assets/resume/Dhana_raju_Resume.pdf" frameborder="0"></iframe>
+                <iframe src="./assets/resume/Dhana_raju_Resume.pdf" frameborder="0"></iframe>
                 <div class="expand-toggle" id="expandToggle">
                     <i class="fas fa-expand"></i>
                 </div>
@@ -454,7 +454,7 @@
             </div>
             
             <div class="resume-actions">
-                <a href="assets/resume/Dhana_raju_Resume.pdf" target="_blank" class="btn view-btn">
+                <a href="./assets/resume/Dhana_raju_Resume.pdf" target="_blank" class="btn view-btn">
                     <i class="fas fa-external-link-alt"></i> View Fullscreen
                 </a>
                 <a href="#" class="btn download-btn">
