--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             </div>
             
             <div class="resume-preview" id="resumePreview">
-                <iframe src="./assets/resume/Dhana_Raju_Resume.pdf=" frameborder="0"></iframe>
+                <iframe src="./assets/resume/Dhana_Raju_Resume.pdf" frameborder="0"></iframe>
                 <div class="expand-toggle" id="expandToggle">
                     <i class="fas fa-expand"></i>
                 </div>
