--- a/index.html
+++ b/index.html
@@ -200,13 +200,22 @@
       <h2>My Skills</h2>
       <div class="skills-container card-group">
         <div class="skill-group">
+          <h3 class="group-title">Programming Languages</h3>
+          <div class="inner-tech">
+              <p><i class="fas fa-copyright skill-icon" style="color: #00599C;"></i> C</p>
+              <p><i class="fab fa-python skill-icon" style="color: #3776ab;"></i> Python</p>
+          </div>
+        </div>
+
+        <div class="skill-group">
           <h3 class="group-title">Web & Frameworks</h3>
           <div class="inner-tech">
             <div class="inner-tech">
               <p><i class="fab fa-html5 skill-icon" style="color: #e34f26;"></i> HTML</p>
               <p><i class="fab fa-css3-alt skill-icon" style="color: #264de4;"></i> CSS</p>
               <p><i class="fab fa-js-square skill-icon" style="color: #f7df1e;"></i> JavaScript</p>
-              <p><i class="fab fa-react skill-icon" style="color: #61dafb;"></i> React</p>
+            <!--  <p><i class="fab fa-react skill-icon" style="color: #61dafb;"></i> React</p> -->
+              <p><i class="fab fa-bootstrap skill-icon" style="color: #7952b3;"></i> Bootstrap</p>
             </div>
           </div>
         </div>
@@ -224,6 +233,7 @@
           <div class="inner-tech">
               <p><i class="fas fa-database skill-icon" style="color: #00758f;"></i> MySQL</p>
               <p><i class="fas fa-database skill-icon" style="color: #003b57;"></i> SQLite</p>
+              <p><i class="fas fa-database skill-icon" style="color: #4db33d;"></i> MongoDB</p>
           </div>
         </div>
 
@@ -306,9 +316,12 @@
                         <h3>Crypto Price Prediction</h3>
                         <p>Used ML & LSTM models to predict BTC, ETH, and LTC prices with 7-day forecasting. Visualized results and generated investment insights.</p>
                         <div class="tags">
-                            <span class="tag">ML</span>
-                            <span class="tag">LSTM</span>
-                            <span class="tag">Matplotlib</span>
+                          <span class="tag">Python</span>
+                          <span class="tag">Flask</span>
+                          <span class="tag">ML</span>
+                          <span class="tag">LSTM</span>
+                          <span class="tag">Matplotlib</span>
+                          <span class="tag">SQLite</span>
                         </div>
                         <div class="project-link-text">
                             <i class="fab fa-github"></i> View on GitHub
@@ -340,8 +353,11 @@
                         <p>Developed a real-time health monitoring system using Arduino, Pulse Sensor, and ThingSpeak, integrated with a Flask web app to display BPM and health status.</p>
                         <div class="tags">
                             <span class="tag">IoT</span>
+                            <span class="tag">Python</span>
                             <span class="tag">Flask</span>
+                            <span class="tag">ML</span>
                             <span class="tag">ThingSpeak</span>
+                            <span class="tag">SQLite</span>
                         </div>
                         <div class="project-link-text">
                             <i class="fab fa-github"></i> View on GitHub
@@ -375,6 +391,7 @@
                   <span class="tag">HTML</span>
                   <span class="tag">CSS</span>
                   <span class="tag">PHP</span>
+                  <span class="tag">MySQL</span>
                 </div>
                 <div class="project-link-text">
                   <i class="fab fa-github"></i> View on GitHub
@@ -519,18 +536,18 @@
             </div>    
             <div class="footer-referral fade-up">
                 <h4>Referral Opportunity</h4>
-                <p>I'm actively seeking new opportunities in software development. If you know of any openings or would be willing to refer me, I'd greatly appreciate it!</p>
+                <p>I'm actively seeking new opportunities in software development. If you know of any openings or would be willing to refer me!</p>
                 <a href="https://mail.google.com/mail/?view=cm&to=illadhanaraju@gmail.com&su=Referral%20Opportunity&body=Hello%20Dhana,%20I'd%20like%20to%20refer%20you%20for%20an%20opportunity." 
                    target="_blank" class="referral-btn">Refer Me</a>
             </div>
         </div>       
         <div class="footer-bottom">
             <p><i class="fas fa-copyright"></i> 2025 Dhana Raju. All Rights Reserved.</p>
-            <div class="footer-legal">
+          <!--  <div class="footer-legal">
                 <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
+                <a href="#">Terms of Service</a> 
                 <a href="https://mail.google.com/mail/?view=cm&to=illadhanaraju@gmail.com">Contact</a>
-            </div>
+            </div> -->
         </div>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
